syntax = "proto3";
package Game.{%= Group %}.{%= Name %}.Setting;

// 命令種類
enum ActionType {
  NORMAL = 0;          // 一般
}

message BaseResponse {
  ActionType actionType = 1;    // 命令種類
  reserved 2;                   // 保留
  repeated uint32 betForm = 3;
  uint32 betFormIndex = 4;
  uint32 decimalPosition = 5;
  bool enableJP = 6;
  bool isDemo = 7;
  uint32 lastBet = 8;
  uint32 lineAmount = 9;
}
